kubernetes/apps/monitoring/loki/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames: ["loki.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: loki-gateway
          port: 80
